added posts, section pages from backup

--- a/config.yml
+++ b/config.yml
@@ -5,3 +5,82 @@ theme: "PaperMod"
 
 googleAnalytics: "G-5FGWR2YZ35"
 
+params:
+  env: production
+  # keywords: [dsa, Blog, ]
+  DateFormat: "January 2, 2006"
+  defaultTheme: auto # dark, light
+  disableThemeToggle: false
+
+  section: "posts"
+
+  assets:
+    disableHLJS: true 
+    favicon: "/assets/favicon.ico"
+    apple_touch_icon: "/assets/favicon.ico" 
+    safari_pinned_tab: "/assets/favicon.ico" 
+
+  ### Features
+  ShowReadingTime: true
+  ShowShareButtons: false
+  ShowPostNavLinks: false
+  ShowBreadCrumbs: false
+  ShowCodeCopyButtons: false
+  disableSpecial1stPost: false
+  disableScrollToTop: false
+  comments: false
+  hidemeta: false
+  hideSummary: false
+  showtoc: false
+  tocopen: false
+  ShowPostNavLinks: false
+  ShowReadingTime: true
+  ShowShareButtons: false
+  ShareButtons: ['facebook','twitter','linkedin']
+
+  label:
+    text: "Shiva Reddy"
+    url: "https://shivareddy.dev"
+    showText: false
+
+
+  # Home Page
+  homeInfoParams:
+    Title: \[~\]$ whoami
+    Content: "This is my journey into the wonderful world of computers. As I explore and learn, I document and share my thoughts and learnings for everyone to enjoy 😀.
+    You can know a tad bit more [about me...](/about-me)"
+
+  socialIcons: # optional
+    - name: Github
+      url: https://github.com/shivajreddy
+    - name: Twitter
+      url: https://twitter.com/shivajreddy
+
+menu:
+  # Main menu
+  main:
+    - identifier: dsa
+      name: DSA
+      url: /dsa
+      weight: 1
+
+  # Footer menu
+  footer:
+    - identifier: blog
+      name: Blog
+      url: /
+      weight: 1
+    - identifier: resume
+      name: Resume
+      url: /resume
+      weight: 2
+    - identifier: socials
+      name: LinkTree
+      url: https://linktr.ee/shiva.reddy
+      weight: 3
+      params:
+        external: true
+    - identifier: archive
+      name: Archive
+      url: /archive
+      weight: 4
