--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,8 @@ theme: "PaperMod"
 googleAnalytics: "G-5FGWR2YZ35"
 
 params:
-  env: production
+  # env: production
+  env: development
   # keywords: [dsa, Blog, ]
   DateFormat: "January 2, 2006"
   defaultTheme: auto # dark, light
@@ -28,7 +29,7 @@ params:
   ShowCodeCopyButtons: false
   disableSpecial1stPost: false
   disableScrollToTop: false
-  comments: false
+  comments: true
   hidemeta: false
   hideSummary: false
   showtoc: false
